# test-pages-preview

./: .dockerignore  .gitignore  Dockerfile  GOOGLE_SHEET_TEMPLATE.md  Makefile  QUICKSTART.md  README.md  SETUP.md  TEST_SUMMARY.md  WHATS_NEW.md  config.yaml.example  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  run_tests.sh
.claude/: CLAUDE.md  NEXT_SESSION_PROMPT.md  README.md  cto-sidekick-plan.md  instructions.md  settings.json
.claude/agents/: security-reviewer.md  test-writer.md
.claude/configs/mcp/: README.md
.claude/docs/: best-practices-sources.md  claude-code-best-practices.md
.claude/docs/snapshots/: best-practices.hash  best-practices.md  memory.hash  memory.md  skills.hash  skills.md  sub-agents.hash  sub-agents.md
.claude/planning/: README.md  research-monitoring-agent-plan.md
.claude/planning/meta-agent/: DONE.md  README.md  TODO.md
.claude/planning/meta-agent/decisions/: 001-tmux-sessions.md
.claude/planning/meta-agent/features/: credit-monitoring.md
.claude/prompts/: README.md
.claude/research/: README.md  claude-code-dangerously-skip-permissions-analysis.md  claude-code-optimization-approaches.md  claude-code-optimization-requirements.md  claude-code-resource-monitoring-list.md  practical-sandbox-comparison.md
.claude/rules/: docker.md  python-style.md  testing.md  verification.md
.claude/skills/fix-issue/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/tdd/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: check-docs.yml  test.yml
docs/: TMUX_SESSIONS.md
pr-1/: index.html
src/: __init__.py  config.py  daemon.py  mocks.py  models.py  scheduler.py  sheets.py  state.py  status.py  test_basic.py
src/my_project/: __init__.py  cli.py  config.py  core.py  models.py
src/runners/: __init__.py  base.py  claude.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_core.py  test_models.py  test_orchestrator.py  test_scheduler.py  test_smoke.py  test_workflows.py
